Updates to bibliography

--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -61,11 +61,11 @@
    doi = {10.1111/0022-3816.00087}
 }
 
-@techreport{bti2020,
+@techreport{bti2022,
    author = {{Bertelsmann Stiftung}},
-   title = {Transformation Index of the Bertelsmann Stiftung 2020},
+   title = {Transformation Index of the Bertelsmann Stiftung 2022},
    institution = {{Bertelsmann Stiftung}},
-   year = {2020}
+   year = {2022}
 }
 
 
@@ -99,12 +99,12 @@
    doi = {10.1017/S0043887100016580}
 }
 
-@techreport{fh2020,
+@techreport{fh2022,
    author = {{Freedom House}},
-   title = {Freedom in the World 2021: Democracy under Siege},
+   title = {Freedom in the World 2022: The Global Expansion of Authoritarian Rule},
    institution = {Freedom House},
-   url = {https://freedomhouse.org/report/freedom-world/2021/democracy-under-siege},
-   year = {2021}
+   url = {https://freedomhouse.org/report/freedom-world/2022/global-expansion-authoritarian-rule},
+   year = {2022}
 }
 
 @article{gwf2014,
@@ -341,30 +341,31 @@
 
 }
 
-@misc{vanhanen2014,
+@misc{vanhanen2019,
    author = {Vanhanen, Tatu},
-   title = {Measures of Democracy 1810-2012},
+   title = {Measures of Democracy 1810-2018 [dataset]. Version 8.0 (2019-06-17).},
    publisher = {Finnish Social Science Data Archive [distributor]},
    address = {Tampere},
-   year = {2014},
-   url = {http://www.fsd.uta.fi/english/data/catalogue/FSD1289/meF1289e.html}
+   year = {2019},
+   url = {http://urn.fi/urn:nbn:fi:fsd:T-FSD1289}
 }
 
 @Misc{vdem11dataset,
-  title = {{V-Dem Country-Year/Country-Date Dataset v11}},
-  author = {Michael Coppedge and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and Nazifa Alizada and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerlow and Adam Glynn and Allen Hicken and Garry Hindle and Nina Ilchenko and Joshua Krusell and Anna L\:uhrmann and Seraphine F. Maerz and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Juraj Medzihorsky and Pamela Paxton and Daniel Pemstein and Josefine Pernes and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundström and Ei-tan Tzelgov and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt.},
+  title = {{V-Dem Country-Year/Country-Date Dataset v12}},
+  author = {Coppedge, Michael and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and Nazifa Alizada and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerløw and Adam Glynn and Sandra Grahn and Allen Hicken and Garry Hindle and Nina Ilchenko and Katrin Kinzelbach and Joshua Krusell and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Juraj Medzihorsky and Pamela Paxton and Daniel Pemstein and Josefine Pernes and Oskar Rydén and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundström and Eitan Tzelgov and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt},
   institution = {Varieties of Democracy (V-Dem) Project},
-  year = {2021},
-  url = {https://www.v-dem.net/en/data/data-version-11/},
+  year = {2022},
+  url = {https://doi.org/10.23696/vdemds22},
 }
 
 @Misc{vdem11codebook,
-  title = {{V-Dem Codebook v11}},
-  author = {Michael Coppedge and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and David Altman and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerlow and Adam Glynn and Allen Hicken and Anna Lührmann and Seraphine F. Maerz and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Pamela Paxton and Daniel Pemstein and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Aksel Sundtröm and Eitan Tzelgov and Luca Uberti and Yi-ting Wang and Tore Wig and Daniel Ziblatt},
+  title = {{V-Dem Codebook v12}},
+  author = {Coppedge, Michael and John Gerring and Carl Henrik Knutsen and Staffan I. Lindberg and Jan Teorell and David Altman and and Michael Bernhard and Agnes Cornell and M. Steven Fish and Lisa Gastaldi and Haakon Gjerløw and Adam Glynn and Sandra Grahn and Allen Hicken and Katrin Kinzelbach and Kyle L. Marquardt and Kelly McMann and Valeriya Mechkova and Pamela Paxton and Daniel Pemstein and Josefine Pernes and Johannes {von Römer} and Brigitte Seim and Rachel Sigman and Svend-Erik Skaaning and Jeffrey Staton and Eitan Tzelgov and Luca Uberti and Yi-ting Wang and Tore Wig and Steven Wilson and Daniel Ziblatt},
   institution = {Varieties of Democracy (V-Dem) Project},
-  year = {2021},
-  url = {https://www.v-dem.net/en/data/data-version-11/},
+  year = {2022},
+  url = {https://www.v-dem.net/static/website/img/refs/codebookv12.pdf},
 }
+
 @article{wahman_teorell_hadenius2007,
    author = {Hadenius, Axel and Teorell, Jan},
    title = {Pathways from Authoritarianism},
@@ -432,9 +433,9 @@
 
 @techreport{eiu2021,
    author = {{The Economist Intelligence Unit}},
-   title = {Democracy Index 2020: In sickness and in health?},
+   title = {Democracy Index 2021: The China Challenge},
    institution = {{The Economist Intelligence Unit}},
-   year = {2021}
+   year = {2022}
 }
 
 @article{svmdi2016,
