--- a/data-raw/bibfile.bib
+++ b/data-raw/bibfile.bib
@@ -343,8 +343,8 @@
 
 @misc{vanhanen2019,
    author = {Vanhanen, Tatu},
-   title = {Measures of Democracy 1810-2018 [dataset]. Version 8.0 (2019-06-17).},
-   publisher = {Finnish Social Science Data Archive [distributor]},
+   title = {Measures of Democracy 1810-2018 (dataset). Version 8.0 (2019-06-17).},
+   publisher = {Finnish Social Science Data Archive (distributor)},
    address = {Tampere},
    year = {2019},
    url = {http://urn.fi/urn:nbn:fi:fsd:T-FSD1289}
